# docs/swagger.json
@@ -88,10 +88,34 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Product"
+                            "$ref": "#/definitions/models.Material"
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "http.StatusOK"
+                    }
+                }
+            }
+        },
+        "/api/material/csv": {
+            "get": {
+                "security": [
+                    {
+                        "AuthToken": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "File"
+                ],
+                "summary": "Ручка",
                 "responses": {
                     "200": {
                         "description": "http.StatusOK"
@@ -151,6 +175,30 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "http.StatusOK"
+                    }
+                }
+            }
+        },
+        "/api/order/csv": {
+            "get": {
+                "security": [
+                    {
+                        "AuthToken": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "File"
+                ],
+                "summary": "Ручка",
                 "responses": {
                     "200": {
                         "description": "http.StatusOK"
@@ -249,23 +297,130 @@
                     }
                 }
             }
+        },
+        "/api/product/csv": {
+            "get": {
+                "security": [
+                    {
+                        "AuthToken": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "File"
+                ],
+                "summary": "Ручка",
+                "responses": {
+                    "200": {
+                        "description": "http.StatusOK"
+                    }
+                }
+            }
+        },
+        "/auth/login": {
+            "post": {
+                "security": [
+                    {
+                        "AuthToken": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Авторизация"
+                ],
+                "summary": "Авторизация",
+                "parameters": [
+                    {
+                        "description": "1",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "http.StatusOK"
+                    }
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "security": [
+                    {
+                        "AuthToken": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Авторизация"
+                ],
+                "summary": "Регистрация",
+                "parameters": [
+                    {
+                        "description": "1",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.RegisterParams"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "http.StatusOK"
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "models.AuthParams": {
+            "type": "object",
+            "required": [
+                "login",
+                "password"
+            ],
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
         "models.Material": {
             "type": "object",
             "required": [
                 "count",
-                "name",
-                "price",
-                "reject_percent"
+                "name"
             ],
             "properties": {
                 "address": {
                     "type": "string"
                 },
                 "count": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "description": {
                     "type": "string"
@@ -277,7 +432,7 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "reject_percent": {
                     "type": "number"
@@ -312,6 +467,9 @@
                 "description": {
                     "type": "string"
                 },
+                "id": {
+                    "type": "integer"
+                },
                 "materials": {
                     "type": "array",
                     "items": {
@@ -322,10 +480,33 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "reject_percent": {
                     "type": "number"
+                }
+            }
+        },
+        "models.RegisterParams": {
+            "type": "object",
+            "required": [
+                "login",
+                "name",
+                "password",
+                "surname"
+            ],
+            "properties": {
+                "login": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "surname": {
+                    "type": "string"
                 }
             }
         },
